# AlphaAgents

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  skills-lock.json
api/app/: main.py
docs/: project-context.md  project-status.md
docs/development/: agent-capability-baseline-development.md
docs/frontend-design/: no-card-baseline.md  (+1 more)
frontend/: index.html
scripts/: export-tdxquant-metadata.py  import-tdx-daily.py  import-tdxquant-metadata.py  start-backend.cmd  start-backend.ps1  start-backend.sh  start-dev.sh
tests/: test_agent_frontend_static.py  test_agent_loop.py  test_agent_memory.py  test_agent_skills.py  test_astock_external_data.py  test_daily_report_api.py  test_data_layer.py  test_data_sync_api.py  test_data_sync_service.py  test_deposition_api.py  test_domain_models.py  test_expert_skills.py  test_frontend_static.py  test_health.py  test_holding_workflow.py  test_llm_config.py  test_local_market_repository.py  test_market_api.py  test_market_indicators.py  test_memory_curator.py  test_portfolio_api.py  test_research_prompts.py  test_research_report_api.py  test_research_workflow.py  test_review_cases_api.py  test_review_operations_api.py  test_review_workflow.py  test_selection_explainability.py  test_selection_workflow.py  test_start_scripts.py  test_stock_alerts.py  test_stock_centric_design_docs.py  test_stock_workspace_api.py  test_strategy_config_api.py  test_strategy_filters.py  test_tdx_daily_importer.py  test_tdx_day_parser.py  test_tdx_sector_metadata.py  test_tdx_security_metadata.py  test_tdxquant_daily.py  (+4 more)
(+84 files in other folders)
